Bug 48784 - observer API not documented
Summary: observer API not documented
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.12.0
Hardware: Other All
: medium normal
Assignee: Bryce Harrington
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: cairo-1.14
  Show dependency treegraph
 
Reported: 2012-04-16 13:45 UTC by Nis Martensen
Modified: 2014-03-13 22:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Nis Martensen 2012-04-16 13:45:44 UTC
Cairo-unused.txt contains the following cairo_*_observer_* symbols:

CAIRO_HAS_OBSERVER_SURFACE
cairo_device_observer_elapsed
cairo_device_observer_fill_elapsed
cairo_device_observer_glyphs_elapsed
cairo_device_observer_mask_elapsed
cairo_device_observer_paint_elapsed
cairo_device_observer_print
cairo_device_observer_stroke_elapsed
cairo_surface_create_observer
cairo_surface_observer_add_fill_callback
cairo_surface_observer_add_finish_callback
cairo_surface_observer_add_flush_callback
cairo_surface_observer_add_glyphs_callback
cairo_surface_observer_add_mask_callback
cairo_surface_observer_add_paint_callback
cairo_surface_observer_add_stroke_callback
cairo_surface_observer_callback_t
cairo_surface_observer_elapsed
cairo_surface_observer_mode_t
cairo_surface_observer_print
Comment 1 Uli Schlachter 2014-03-13 22:25:13 UTC
commit f4a1a75078a844e2581615566122f4232d2a4f62
Author: Bryce Harrington <b.harrington@samsung.com>
Date:   Tue Feb 25 13:17:00 2014 -0800

    doc: Add missing sections and symbols for public docs
    
    This adds a number of items to the documentation for which code docs
    exist, and also adds sections for cairo-skia and cairo-surface-observer.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48784
    
    Signed-off-by: Bryce Harrington <b.harrington@samsung.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.